# editortex

./: .gitignore  .prettierignore  AGENTS.md  AGENT_RULES.md  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.codex/compare-editortex/: main.tex
.github/workflows/: ci.yml
benchmark-results/: editorlatex-benchmark.json  editorlatex-benchmark.md
docs/: AGENT_DOCS_INDEX.md  AGENT_GUARDRAILS.md  AGENT_ONBOARDING.md  AGENT_TASK_CHECKLISTS.md  AI_CONTEXT.md  ARCHITECTURE.md  CACHE_STRATEGY.md  CHANGELOG_AI.md  CODING_STANDARDS.md  COMPILATION_PIPELINE.md  KNOWN_LIMITATIONS.md  LATEX_TEMPLATE_RULES.md  PERFORMANCE_GUIDELINES.md  PROJECT_MANIFEST.md  ROADMAP.md  TESTING_STRATEGY.md
scripts/: benchmarkLatexCompilation.ts  perf-compile-template.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/latex-runtime/: README.md
src-tauri/src/: latex_compile.rs  lib.rs  main.rs  project_manifest.rs  project_sync.rs
src/app/: App.tsx
src/blocks/: blockRegistry.ts  blockTemplateResolver.ts  dynamicBlockFactory.ts
src/hooks/: useGeneratedLatex.ts  useTemplateUpload.ts
src/latex/: blockRenderer.ts  escapeLatex.ts  inlineLatex.ts  latexGenerator.ts
src/parser/: commandParser.ts  documentBlockImporter.ts  environmentParser.ts  latexParser.ts  templateNormalizer.ts  variableExtractor.ts
src/preview/: pdfPreviewService.ts  pdfRenderer.tsx
src/services/: exportService.ts  overleafZipService.ts  templateStorageService.ts
src/store/: editorStore.ts  (+4 more)
(+113 files in other folders)
