[package]
name = "editortex"
version = "0.1.0"
description = "Editor visual de documentos LaTeX baseado em blocos"
authors = ["EditorTex"]
edition = "2021"

[lib]
name = "editortex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
